# bumperbot_robot

./: README.md
bumperbot_controller/: CMakeLists.txt  package.xml  setup.py
bumperbot_controller/config/: diff_drive_controller.yaml
bumperbot_controller/include/bumperbot_controller/: simple_controller.h
bumperbot_controller/launch/: controller.launch
bumperbot_controller/nodes/: noisy_controller_node.py  simple_controller_node.cpp  simple_controller_node.py
bumperbot_controller/src/: simple_controller.cpp
bumperbot_controller/src/bumperbot_controller/: simple_controller.py
bumperbot_description/: CMakeLists.txt
bumperbot_description/launch/: rviz.launch
bumperbot_description/rviz/: display.rviz
bumperbot_description/urdf/: bumperbot.urdf.xacro  bumperbot_gazebo.xacro
bumperbot_example/: CMakeLists.txt  package.xml
bumperbot_example/config/: simple_configuration.yaml
bumperbot_example/nodes/: simple_publisher.cpp  simple_publisher.py  simple_subscriber.cpp  simple_subscriber.py
ros1_ws/src/bumperbot_controller/: CMakeLists.txt  package.xml  setup.py
ros1_ws/src/bumperbot_controller/include/bumperbot_controller/: own_controller.h  simple_controller.h
ros1_ws/src/bumperbot_controller/launch/: controller.launch
ros1_ws/src/bumperbot_controller/src/: own_controller.cpp  simple_controller.cpp
ros1_ws/src/bumperbot_controller/src/bumperbot_controller/: noisy_controller.py  own_controller.py  simple_controller.py
ros1_ws/src/bumperbot_description/: package.xml
ros1_ws/src/bumperbot_description/launch/: gazebo.launch  rviz.launch
ros1_ws/src/bumperbot_description/models/maza/: model.config  model.sdf
ros1_ws/src/bumperbot_description/rviz/: display.rviz
ros1_ws/src/bumperbot_description/urdf/: bumperbot.urdf.xacro  bumperbot_gazebo.xacro
ros1_ws/src/bumperbot_examples/: CMakeLists.txt  package.xml  setup.py
ros1_ws/src/bumperbot_examples/include/bumperbot_examples/: tf_examples.h
ros1_ws/src/bumperbot_examples/nodes/: simple_service_client.cpp
ros1_ws/src/bumperbot_examples/src/: tf_examples.cpp
ros1_ws/src/bumperbot_examples/src/bumperbot_examples/: tf_examples.py
ros1_ws/src/bumperbot_localization/: CMakeLists.txt  package.xml  setup.py
ros1_ws/src/bumperbot_localization/config/: ekf_localization.yaml
ros1_ws/src/bumperbot_localization/launch/: local_localization.launch  start_ekf_localization.launch
ros1_ws/src/bumperbot_main/: CMakeLists.txt  package.xml
ros1_ws/src/bumperbot_main/launch/: main.launch
ros1_ws/src/bumperbot_odom_to_trajectory/: CMakeLists.txt  package.xml  setup.py
ros1_ws/src/bumperbot_odom_to_trajectory/launch/: odom_to_trajectory.launch
ros1_ws/src/bumperbot_odom_to_trajectory/nodes/: path_ekf_plotter_nodes.py  path_odom_plotter_nodes.py
ros1_ws/src/bumperbot_odom_to_trajectory/rviz/: odom_to_trajectory.rviz
ros1_ws/src/bumperbot_odom_to_trajectory/src/bumperbot_odom_to_trajectory/: path_ekf_plotter.py  path_odom_plotter.py
ros2_ws/src/my_cpp_pkg_example/: CMakeLists.txt  package.xml
ros2_ws/src/my_cpp_pkg_example/src/: simple_node.cpp
ros2_ws/src/my_python_pkg_example/: package.xml  setup.cfg  setup.py
ros2_ws/src/my_python_pkg_example/my_python_pkg_example/: simple_node.py  simple_publisher_node.py
